# star-lifetime

./: .gitignore  CMakeLists.txt  README.md
deprecated_src/: README.md  star.cpp  star.h  stellar_mass.cpp  stellar_mass.h
include/: README.md  differentiators.h  errors.h  integrators.h  main.h  star.h  star_physics.h  stellar_mass.h  stellar_models.h  util.h
include/num_analysis/: differentiation.h  errors.h  integration.h
include/physics/: constants.h  star_physics.h
resources/: app_icon.rc
src/: README.md  differentiators.cpp  errors.cpp  finance.cpp  integrators.cpp  main.cpp  main_star_test.cpp  star.cpp  star_physics.cpp  stellar.cpp  stellar_mass.cpp  stellar_models.cpp  test_stellar_physics.cpp  util.cpp
src/num_analysis/: differentiation.cpp  errors.cpp  integration.cpp
src/physics/: star_physics.cpp
